# 12_new_Django

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
.config_secret/: secret.json
config/: settings.py  urls.py
member/: forms.py  models.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_user_nickname.py  0003_alter_user_nickname.py
static/css/: style.css
templates/: base.html  home.html  pagination.html  todo_create.html  todo_delete.html  todo_detail.html  todo_list.html  todo_update.html  tododetail.html  todolist.html
templates/auth/: email_verified_done.html  login.html  not_verified.html  profile_update.html  signup.html  signup_done.html
templates/partials/: _comment.html
templates/registration/: login.html  signup.html
todo/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_options.py  0003_rename_description_todo_content_todo_author.py  0004_comment.py  0005_todo_image_todo_thumbnail.py
totolist/: asgi.py  settings.py  urls.py  wsgi.py
utils/: email.py
