[tool.poetry]
name = "Todolist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "config" },
    { include = "todo" },
    { include = "member" },
]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.4,<6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"