[tool.poetry]
name = "Todolist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "config" },
    { include = "todo" },
    { include = "member" },
]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.4,<6.0.0"
django-summernote = "^0.8.20.0"
pillow = "^11.3.0"
django-cleanup = "^9.0.0"
django-widget-tweaks = "^1.5.0"
django-extensions = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"